# cuda-nexus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_attention.cu  benchmark_gemm.cu  benchmark_reduction.cu
docs/: API.md
examples/: CMakeLists.txt  attention_example.cu  gemm_example.cu
include/: cuda_nexus.h  tensor.h
include/kernels/: activation.cuh  attention.cuh  convolution.cuh  gemm.cuh  memory_ops.cuh  normalization.cuh  reduction.cuh
include/utils/: memory_pool.h  profiler.h
kernels/: activation.cu  attention.cu  convolution.cu  gemm.cu  memory_ops.cu  normalization.cu  reduction.cu
scripts/: build.sh  run_benchmarks.sh
src/: async_ops.cpp  device_info.cpp
tests/: CMakeLists.txt  test_gemm.cu
